--- a/activities/ac10/index.html
+++ b/activities/ac10/index.html
@@ -26,7 +26,7 @@
             html{
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 border:0.5em solid black;
-                background-color:black
+                background-image:linear-gradient(to bottom,#000000,#000000)
             }
             body{
                 background-color:white;
@@ -67,7 +67,7 @@
                 content: '';
                 position: absolute;
                 width: 100%;
-                transform: scaleX(0);
+                transform: scaleX(0);/*0*/
                 height: 2px;
                 bottom: 0;
                 left: 0;
@@ -77,7 +77,7 @@
             }
 
             .aa:hover:after{
-                transform:scaleX(1);
+                transform:scale(1);
                 transform-origin: bottom left;
             }
 
