--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
 <!doctype html>
 <html>
     <head>
-        <title>Redirecting</title>
-        <script>
-            window.location.href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac10/index.html"
-        </script>
+        <title>Kevin's Homepage</title>
+        <style>
+            html{
+                font-family:Arial, Helvetica, sans-serif;
+                background-color:black;
+                color:white;
+            }
+
+
+/*https://codepen.io/samnorton/pen/zBYMJG*/
+
+* {
+	box-sizing: border-box;
+}
+body {
+	font-family: 'Montserrat', sans-serif;
+	line-height: 1.6;
+	margin: 0;
+	min-height: 100vh;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+
+h2.header,
+h3.header,
+a {
+	color: #9dc5f0;
+}
+
+a {
+	text-decoration: none;
+}
+
+
+
+.logo {
+	margin: 0;
+	font-size: 1.45em;
+}
+
+.main-nav {
+	margin-top: 5px;
+
+}
+.logo a,
+.main-nav a {
+	padding: 10px 15px;
+	text-transform: uppercase;
+	text-align: center;
+	display: block;
+}
+
+.main-nav a {
+	color: #9dc5f0;
+	font-size: .99em;
+    transition:0.25s;
+}
+
+.main-nav a:hover {
+	color: #7d9ec1;
+}
+
+
+
+.header {
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border: 1px solid #212121;
+	background-color: #4b4b4b;
+	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+
+
+
+@media (min-width: 769px) {
+	.header,
+	.main-nav {
+		display: flex;
+	}
+	.header {
+		flex-direction: column;
+		align-items: center;
+		/*width: 80%;*/
+		margin: 0 auto;
+		max-width: 1250px;/*1150px;*/
+	
+	}
+
+}
+
+@media (min-width: 1025px) {
+	.header {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+}
+
+
+
+/**********************   aight my code from now on*/
+.content{
+    color:rgba(200, 200, 200, 0.75) !important;
+}
+
+        </style>
     </head>
     <body>
-        If you have not been redirected yet, click <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac10/index.html">here</a>
+        <header class="header">
+            <h1 class="logo"><a href="#">Text</a></h1>
+          <ul class="main-nav">
+              <li><a href="/activities/index.html">activites</a></li>
+              <li><a href="#">test</a></li>
+              <li><a href="#">test</a></li>
+              <li><a href="#">test</a></li>
+          </ul>
+        </header> 
+
+        <div class="content">
+            <!--add your stuff here-->
+        </div>
+    
     </body>
 </html>
