--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ a {
         <header class="header">
             <h1 class="logo"><a href="#">Text</a></h1>
           <ul class="main-nav">
-              <li><a href="/activities/index.html">activites</a></li>
+              <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">activites</a></li>
               <li><a href="#">test</a></li>
               <li><a href="#">test</a></li>
               <li><a href="#">test</a></li>
