--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ a {
 	}
 }
 
-.rainbow {
+.rainbow { /*https://codepen.io/Chester/pen/QPoyjN*/
 	position: relative;
 	z-index: 0;
 	/*width: 400px;
