--- a/activities/index.html
+++ b/activities/index.html
@@ -29,9 +29,13 @@
                 background-image:linear-gradient(to bottom,#000000,#000000)
             }
             body{
-                background-color:white;
+                background-color:rgb(100,100,100);
                 padding:0.01em;
                 border-radius:0.5em;
+                color:white !important;
+            }
+            a{
+                color:white !important;
             }
             .everything_inside_body{
                 width:95%;
