--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ a {
     animation-timing-function: ease-in-out;
 
 
-    background: linear-gradient(-45deg, #ee76527e, #e73c7e79, #23a5d577, #23d5ab75);
+    background: /*url(https://wallpapercave.com/wp/wp9553605.png);*/linear-gradient(-45deg, #ee76527e, #e73c7e79, #23a5d577, #23d5ab75);
     background-size: 400% 400%;
     animation: gradient 30s linear infinite;
 
