--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a {
 
     background: /*url(https://wallpapercave.com/wp/wp9553605.png);*/linear-gradient(-45deg, #ee76527e, #e73c7e79, #23a5d577, #23d5ab75);
     background-size: 400% 400%;
-    animation: gradient 30s linear infinite;
+    animation: gradient 30s ease-in-out infinite;
 
 
     border-radius:0.25em;
@@ -202,11 +202,11 @@ a {
 
 @keyframes op {
     from {
-        color:rgba(255, 255, 255, 0.05);
+        transform:translateX(-50px);
     }
     to {
-        color:rgba(255, 255, 255, 0.8);
-    }
+        transform:translateX(50px);
+        }
 }
 @keyframes gradient {
     0% {
