--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ a {
                     IMPORTANT: Must put script tag next to the div for it to work
                     -->
                     <div class="github-card" data-github="imapotatoes11" data-width="400" data-height="150" data-theme="default"
-                    style=""></div>
+                    style="background-color:black !important;"></div>
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                 </div>
                 <div class="content3">
