--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
             html{
                 font-family:Arial, Helvetica, sans-serif;
                 background-color:black;
+                background:linear-gradient(45deg,rgb(17.5,0,0),rgb(0,0,17.5));
+                background-size:400% 400%;
                 color:white;
+                animation: gradient 100s ease-in-out infinite; /*Make a subtle color change thing in background*/
             }
 
 
@@ -140,6 +143,7 @@ a {
 
 
     background: /*url(https://wallpapercave.com/wp/wp9553605.png);*/linear-gradient(-45deg, #ee76527e, #e73c7e79, #23a5d577, #23d5ab75);
+    /*background:url(https://images.hdqwalls.com/wallpapers/desktop-abstract-2020-4k-mm.jpg);*/
     background-size: 400% 400%;
     animation: gradient 30s ease-in-out infinite;
 
@@ -150,7 +154,7 @@ a {
 
 
 .content3{
-    background:rgb(30,30,50);
+    background:rgb(30,30,30);
 
     padding-left:1em;
     padding-right:1em;
@@ -158,8 +162,8 @@ a {
     width:50%;
     margin:0 5px;
     
-    border-radius:0.25em;
-    border:5px solid rgb(40,40,60);
+    border-radius:1em;
+    border:5px solid rgb(40,40,40);
 }
 .content3_button{
     background:rgb(60,60,100);
@@ -220,7 +224,7 @@ a {
 
     margin-top:1em;
     
-    border-radius:0.25em;
+    border-radius:1em;
     border:5px solid rgb(40,40,60);
 }
 
@@ -229,7 +233,7 @@ a {
 
 
 .footer{
-    background-color:rgb(30,30,50);
+    background-color:rgba(0,0,0,0);
     margin-top:25px;
     padding:1em;
     text-align:center;
@@ -344,6 +348,7 @@ a {
                     <li>make footer buttons actually work</li>
                     <li>Add more color (too much blue rn)</li>
                     <li>Replace sample text with actual (meaningful) text</li>
+                    <li>CURRENT COLORS: rgb(30,30,50), rgb(40,40,60), rgb(30,30,30), rgb(40,40,40)</li>
                 </ol>
             </div>
 
