--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ a {
     </head>
     <body>
         <header class="header">
-            <h1 class="logo"><a href="#">Text</a></h1>
+            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">activites</a></li>
               <li><a href="#">test</a></li>
@@ -311,21 +311,21 @@ a {
             
             <div style="display:flex; margin:0 -5px;">
                 <div class="content3">
-                    <p id="typeout1">Lorem ipsum dolor sit amet. Qui dolorem quia et harum soluta ea reiciendis dolorem.</p>
-                    <a href="https://imapotatoes11.github.io/vigilant-telegram">
+                    <p id="typeout1">Hello! I am Kevin. I like to program things in my spare time. I am currently taking a computer science course to learn more about computer science!</p>
+                    <a href="https://imapotatoes11.github.io/acpo/docs/x.html">
                         <div class="content3_button" style="text-align:center; width:7.5em; font-size:12.5px; color:rgba(255,255,255,0.75); margin:auto; margin-bottom:1em; margin-top:1em;">
                             Click Me!
                         </div>
                     </a>
                 </div>
                 <div class="content3">
-                    <p>Et beatae atque qui itaque sint non molestiae consequatur aut laboriosam dicta ut ducimus labore et sint laborum. </p>
+                    <p>I have a GitHub account! You can follow me and view my projects here:</p>
                     <!--
                     used for github cards: https://lab.lepture.com/github-cards 
                     IMPORTANT: Must put script tag next to the div for it to work
                     -->
                     <div class="github-card" data-github="imapotatoes11" data-width="400" data-height="150" data-theme="default"
-                    style="background-color:black !important;"></div>
+                    style="background-color:black !important; border:0.1em solid black; border-radius:0.5em;"></div>
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                 </div>
                 <div class="content3">
@@ -333,23 +333,15 @@ a {
                     <script src="/script.js"></script>-->
                     <h4>Future Projects:</h4>
                     <ol>
-                        <li>a</li>
-                        <li>b</li>
-                        <li>c</li>
-                        <li>d</li>
+                        <li>Expansion of this website (more pages, more content...)</li>
+                        <li>Adding links to more projects to this website</li>
                     </ol>
                 </div>
             </div>
 
             <div class="content4">
-                <h3>TODO <em style="color:white; font-weight:bold;">(TEMP DELETE THIS IN PRODUCTION)</em></h3>
-                <ol>
-                    <li>make about page</li>
-                    <li>make footer buttons actually work</li>
-                    <li>Add more color (too much blue rn)</li>
-                    <li>Replace sample text with actual (meaningful) text</li>
-                    <li>CURRENT COLORS: rgb(30,30,50), rgb(40,40,60), rgb(30,30,30), rgb(40,40,40)</li>
-                </ol>
+                <h3>Activities</h3>
+                <iframe src="https://imapotatoes11.github.io/vigilant-telegram/activities" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>
             </div>
 
 
