--- a/index.html
+++ b/index.html
@@ -340,7 +340,13 @@ a {
             </div>
 
             <div class="content4">
-                <h3>Activities</h3>
+                <style>
+                    iframe{
+                        border:5px solid rgb(40,40,40);
+                        border-radius:0.5em;
+                    }
+                </style>
+                <h3>Projects</h3>
                 <iframe src="https://imapotatoes11.github.io/vigilant-telegram/activities" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>
             </div>
 
@@ -368,7 +374,7 @@ a {
                 <script type="text/javascript" src="/script.js">window.scrollTop=scrollTop</script>
                 <a href="#" class="flex_a">Home</a>
                 <a href="#" class="flex_a">About</a>
-                <a href="#" class="flex_a">Contact</a>
+                <a href="mailto:imapotatoes11@gmail.com" class="flex_a">Contact</a>
                 <button onclick="window.scrollTop()" class="flex_a">Back to Top</button>
             </div>
         </div>
