--- a/activities/index.html
+++ b/activities/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Kevin's Homepage</title>
+        <title>Kevin's Homepage [PROJECTS]</title>
         <style>
             html{
                 font-family:Arial, Helvetica, sans-serif;
@@ -337,9 +337,9 @@ a {
     </head>
     <body>
         <header class="header">
-            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
+            <h1 class="logo"><a href="https://imapotatoes11.github.io/vigilant-telegram" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
           <ul class="main-nav">
-              <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">activites</a></li>
+              <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="#">test</a></li>
               <li><a href="#">test</a></li>
               <li><a href="#">test</a></li>
@@ -348,7 +348,7 @@ a {
 
         <div class="content">
             <!--add your stuff here-->
-            <h2 class="content1">Select an activity</h2>
+            <h2 class="content1">My Projects</h2>
 
             <div class="content3" style="width:100% !important; margin:auto;">
                 <h2>Select an activity below...</h2>
@@ -391,7 +391,7 @@ a {
                 <script type="text/javascript" src="/script.js">window.scrollTop=scrollTop</script>
                 <a href="#" class="flex_a">Home</a>
                 <a href="#" class="flex_a">About</a>
-                <a href="#" class="flex_a">Contact</a>
+                <a href="mailto:imapotatoes11@gmail.com" class="flex_a">Contact</a>
                 <button onclick="window.scrollTop()" class="flex_a">Back to Top</button>
             </div>
         </div>
