--- a/demo.html
+++ b/demo.html
@@ -463,9 +463,14 @@ a {
             
 
             <div class="content3" style="width:100% !important; margin-left:auto; margin-right:auto; margin-bottom:1em;">
+                <link rel="stylesheet" href="demo_img.css">
                 <h2>Images</h2>
-                <p>
-                    <img src="https://imapotatoes11.github.io/acpo/alex.jpg">
+                <p style="display:flex; margin:auto -5px !important;">
+                    <img src="https://imapotatoes11.github.io/acpo/asdfasdf.png" height="250em;" style="margin: auto 5px;">
+                    <img src="https://imapotatoes11.github.io/acpo/asdfasdf.png" height="250em;" style="margin: auto 5px;">
+                    <img src="https://imapotatoes11.github.io/acpo/asdfasdf.png" height="250em;" style="margin: auto 5px;">
+                    <img src="https://imapotatoes11.github.io/acpo/asdfasdf.png" height="250em;" style="margin: auto 5px;">
+                    <img src="https://imapotatoes11.github.io/acpo/asdfasdf.png" height="250em;" style="margin: auto 5px;">
                 </p>
             </div>
 
