--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Kevin's Homepage [DEMO]</title>
+        <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             html{
                 font-family:Arial, Helvetica, sans-serif;
