--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ a {
 .main-nav a {
 	color: #9dc5f0;
 	font-size: .99em;
-    transition:0.25s;
+    transition:0.25s ease-out;
 }
 
 .main-nav a:hover {
@@ -322,7 +322,7 @@ a {
                     </a>
                 </div>
                 <div class="content3">
-                    <p>I have a GitHub account! You can follow me and view my projects here:</p>
+                    <p>I have a GitHub account! You can follow me and view my projects here<a href="https://rickrollredirect.github.io">:</a></p>
                     <!--
                     used for github cards: https://lab.lepture.com/github-cards 
                     IMPORTANT: Must put script tag next to the div for it to work
@@ -426,6 +426,7 @@ a {
                 </style>
                 <h2 style="text-align:center;">Projects</h2>
                 <iframe src="https://imapotatoes11.github.io/vigilant-telegram/activities" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>
+                <!--<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>-->
             </div>
 
 
