--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
-              <li><a href="#">test</a></li>
+              <li><a href="https://imapotatoes11.github.io/vigilant-telegram/about.html">About</a></li>
               <li><a href="#">test</a></li>
           </ul>
         </header> 
 
         <div class="content">
             <!--add your stuff here-->
-            <h2 class="content1">Welcome to my Website!</h2>
+            <h2 class="content1">Welcome to my Website!<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)"></h2>
             
             <div style="display:flex; margin:0 -5px;">
                 <div class="content3">
