--- a/about.html
+++ b/about.html
@@ -355,7 +355,7 @@ a {
                 <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em;">
                     Hello! My name is Kevin, and I am taking a course in computer science at AY Jackson Secondary School.
                 </p>
-                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em; padding-left:1em; padding-right:1em;">
+                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em; /*padding-left:1em; padding-right:1em;*/ padding-left:5em; padding-right:5em;">
                     I like to program things in my free time. I mainly write programs in Python, but I also have experience with Java, C, C++, C#, JavaScript, Vlang, Carbon lang, and even swift! I am always eager to learn new things and improve my skills.
                 </p>
             </div>
