--- a/activities/index.html
+++ b/activities/index.html
@@ -130,7 +130,10 @@
 
         <div class="content">
             <!--add your stuff here-->
-            <h2 class="content1">My Projects</h2>
+            <h2 class="content1" style="
+            background-color: linear-gradient(to-right, #1565C0, #b92b27) !important;
+            padding-bottom:10vh !important; padding-top:10vh !important;
+            ">My Projects<!--<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)">--></h2>
 
             <div class="content3" style="width:100% !important; margin:auto;">
                 <h2>Select an activity below...</h2>
