--- a/demo.html
+++ b/demo.html
@@ -115,7 +115,9 @@
 
         <div class="content">
             <!--add your stuff here-->
-            <h2 class="content1">HTML Demo</h2>
+            <h2 class="content1" style="
+            background-color: linear-gradient(to-right, #1565C0, #b92b27) !important;
+            ">HTML Demo<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)"></h2>
 
             <style>
                 p {
