--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 
         <div class="content">
             <!--add your stuff here-->
-            <h2 class="content1">Welcome to my Website!<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)"></h2>
+            <h2 class="content1" style="
+            background-color: linear-gradient(to-right, #1565C0, #b92b27) !important;
+            ">Welcome to my Website!<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)"></h2>
             
             <div style="display:flex; margin:0 -5px;">
                 <div class="content3">
