--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </a>
                 </div>
                 <div class="content3">
-                    <p>I have a GitHub account! You can follow me and view my projects here<a href="https://rickrollredirect.github.io">:</a></p>
+                    <p>I have a GitHub account! You can follow me and view my projects <a href="https://github.com/imapotatoes11">here</a><a href="https://rickrollredirect.github.io"></a></p>
                     <!--
                     used for github cards: https://lab.lepture.com/github-cards 
                     IMPORTANT: Must put script tag next to the div for it to work
