--- a/activities/index.html
+++ b/activities/index.html
@@ -124,7 +124,7 @@
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/about.html">About</a></li>
-              <li><a href="#">test</a></li>
+              <!--<li><a href="#">test</a></li>-->
           </ul>
         </header> 
 
