--- a/demo.html
+++ b/demo.html
@@ -108,8 +108,8 @@
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
-              <li><a href="#">test</a></li>
-              <li><a href="#">test</a></li>
+              <li><a href="https://imapotatoes11.github.io/vigilant-telegram/about.html">About</a></li>
+              <!--<li><a href="#">test</a></li>-->
           </ul>
         </header> 
 
