--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!--add your stuff here-->
             <h2 class="content1" style="
             background-color: linear-gradient(to-right, #1565C0, #b92b27) !important;
-            ">Welcome to my Website!<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)"></h2>
+            ">Welcome to my Website!<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+130)"></h2>
             
             <div style="display:flex; margin:0 -5px;">
                 <div class="content3">
@@ -106,9 +106,12 @@
                     used for github cards: https://lab.lepture.com/github-cards 
                     IMPORTANT: Must put script tag next to the div for it to work
                     -->
-                    <div class="github-card" data-github="imapotatoes11" data-width="400" data-height="150" data-theme="default"
-                    style="background-color:black !important; border:0.1em solid black; border-radius:0.5em;"></div>
-                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                    <!--<div class="github-card" data-github="imapotatoes11" data-width="400" data-height="150" data-theme="default"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>-->
+                    <div class="github" style="">
+                        <github-card data-user="imapotatoes11" data-theme="dark"></github-card>
+                    </div>
+                    <script type="module" src="https://unpkg.com/@rocktimsaikia/github-card@latest?module"></script>
                 </div>
                 <div class="content3">
                     <!--<p id="typeout">Vel commodi perspiciatis hic voluptatem ducimus sit magnam illum non blanditiis temporibus est ratione voluptas 33 doloribus nulla!</p>
