--- a/demo.html
+++ b/demo.html
@@ -117,7 +117,7 @@
             <!--add your stuff here-->
             <h2 class="content1" style="
             background-color: linear-gradient(to-right, #1565C0, #b92b27) !important;
-            ">HTML Demo<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+130)"></h2>
+            ">HTML Demo<br><img src="down-arrow-svgrepo-com.svg" style="border:none;" onclick="window.scrollBy(0,window.innerHeight+130)"></h2>
 
             <style>
                 p {
