--- a/demo.html
+++ b/demo.html
@@ -128,7 +128,7 @@
             <div class="content3" style="width:100% !important; margin-left:auto; margin-right:auto; margin-bottom:1em;">
                 <h2>About</h2>
                 <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding:1em;">
-                    I use this page to test and experiment with all of the HTML tags
+                    I use this page to test and experiment with some HTML tags and some JavaScript
                 </p>
             </div>
 
