--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     -->
                     <!--<div class="github-card" data-github="imapotatoes11" data-width="400" data-height="150" data-theme="default"></div>
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>-->
-                    <div class="github" style="">
+                    <div class="github" style="max-width:10em;">
                         <github-card data-user="imapotatoes11" data-theme="dark"></github-card>
                     </div>
                     <script type="module" src="https://unpkg.com/@rocktimsaikia/github-card@latest?module"></script>
