--- a/demo.html
+++ b/demo.html
@@ -104,7 +104,7 @@
     </head>
     <body>
         <header class="header">
-            <h1 class="logo"><a href="https://imapotatoes11.github.io/vigilant-telegram" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
+            <h1 class="logo"><a href="https://imapotatoes11.github.io/vigilant-telegram" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Kevin</h1></a></h1>
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
@@ -254,7 +254,7 @@
                     }
                 </style>
                 <h2 style="text-align:center;">This is an Iframe</h2>
-                <iframe src="https://imapotatoes11.github.io/vigilant-telegram/demo.html" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>
+                <iframe src="https://jmstng.github.io/School-HTML/HTML%20Showcase/index.html" width="90%" height="750px" style="display:block; margin:1em auto;"></iframe>
             </div>
 
             
