--- a/template.html
+++ b/template.html
@@ -337,7 +337,7 @@ a {
     </head>
     <body>
         <header class="header">
-            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
+            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Kevin</h1></a></h1>
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
