--- a/about.html
+++ b/about.html
@@ -337,7 +337,7 @@ a {
     </head>
     <body>
         <header class="header">
-            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Text</h1></a></h1>
+            <h1 class="logo"><a href="#" style="display:flex; text-align:center; margin:0 -5px;"><img src="https://avatars.githubusercontent.com/u/79340132?v=4" height="45em" style="border:1px solid black; border-radius:1em;"><h1 style="margin:0 5px; font-size:20px; text-align:center; transform:translateY(0.5em);">Kevin</h1></a></h1>
           <ul class="main-nav">
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/activities/index.html">Projects</a></li>
               <li><a href="https://imapotatoes11.github.io/vigilant-telegram/demo.html">HTML Demo</a></li>
@@ -355,8 +355,13 @@ a {
                 <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em;">
                     Hello! My name is Kevin, and I am taking a course in computer science at AY Jackson Secondary School.
                 </p>
-                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em; /*padding-left:1em; padding-right:1em;*/ padding-left:5em; padding-right:5em;">
+                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em; /*padding-left:1em; padding-right:1em;*/ padding-left:10em; padding-right:10em;">
                     I like to program things in my free time. I mainly write programs in Python, but I also have experience with Java, C, C++, C#, JavaScript, Vlang, Carbon lang, Rust, Nim, and even swift! I am always eager to learn new things and improve my skills.
+                </p>
+                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center; padding-top:1em;padding-bottom:1em; /*padding-left:1em; padding-right:1em;*/ padding-left:10em; padding-right:10em;">
+                    I have yet to fully develop and make an entire project, but here are some things I am looking towards making:<br>
+                    - H<br>
+                    - H<br>
                 </p>
             </div>
             
