--- a/activities/index.html
+++ b/activities/index.html
@@ -136,7 +136,7 @@
             ">My Projects<!--<br><img src="down-arrow-svgrepo-com.svg" onclick="window.scrollBy(0,window.innerHeight+100)">--></h2>
 
             <div class="content3" style="width:100% !important; margin:auto;">
-                <h2>Select an activity below...</h2>
+                <h2>Activities</h2>
                 <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center;">
                     <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac1" class="aa">Activity 1</a>
                     <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac2" class="aa">Activity 2</a>
@@ -148,6 +148,14 @@
                     <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac8" class="aa">Activity 8</a>
                     <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac9" class="aa">Activity 9</a>
                     <a href="https://imapotatoes11.github.io/vigilant-telegram/activities/ac10" class="aa">Activity 10</a>
+                </p>
+            </div>
+
+            <div class="content3" style="width:100% !important; margin:auto;">
+                <h2>CSS tests</h2>
+                <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center;">
+                    <a href="neumorph/index.html" class="aa">Neumorphism</a>
+                    <a href="buttons/index.html" class="aa">General CSS Buttons</a>
                 </p>
             </div>
             
