--- a/demo.html
+++ b/demo.html
@@ -246,6 +246,39 @@
             </div>
 
 
+            <div class="content3" style="width:100% !important; margin-left:auto; margin-right:auto; margin-bottom:1em;">
+                <style>
+#aa1{
+    border-radius: 50px;
+    background: #1e1e1e;
+    box-shadow:  20px 20px 40px #181818,
+                -20px -20px 40px #242424;
+    margin:5em;
+    transition:0.25s ease-out;
+}
+#aa1:hover{
+    /*border-radius: 50px;
+    background: #232323;
+    box-shadow: inset 20px 20px 40px #1c1c1c,
+                inset -20px -20px 40px #2a2a2a;*/
+    animation:aa1_k 0.25s ease-out forwards;
+}
+@keyframes aa1_k{
+    0%{
+        border-radius: 50px;
+        background: #1e1e1e;
+        box-shadow:  20px 20px 40px #181818,
+                 -20px -20px 40px #242424;
+    }
+    100%{
+        opacity:75%;
+    }
+}
+                </style>
+                <p id="aa1">hello</p>
+            </div>
+
+
             <div class="content4" style="background-color:rgb(30,30,30) !important; border-color:rgb(40,40,40) !important;">
                 <style>
                     iframe{
