--- a/activities/index.html
+++ b/activities/index.html
@@ -156,6 +156,7 @@
                 <p style="background-color:rgb(40,40,40) !important; text-align: center; display:flex; margin:1em -5px; border-radius:0.5em; justify-content:center;">
                     <a href="neumorph/index.html" class="aa">Neumorphism</a>
                     <a href="buttons/index.html" class="aa">General CSS Buttons</a>
+                    <a href="gradient_text/index.html" class="aa">Aurora gradients?</a>
                 </p>
             </div>
             
